# geospatial-data-converter

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  dev-requirements.txt  docker-compose.stack.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: bumpver.yml  check-file-size-limit.yml  ci.yml  docker-hub.yml  hf-space.yml  release-assets.yml
geospatial-data-converter/: app.py  arcgis_loader.py  geotiff_tricks.py  kml_tricks.py  utils.py
tests/: test_arcgis_loader.py  test_conversions.py  test_geotiff.py
