[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geospatial-data-converter"
version = "1.2.0"
description = "Streamlit app for converting geospatial datasets between common formats."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "Joshua Bailey" },
]
dependencies = [
    "aiohttp==3.13.5",
    "beautifulsoup4==4.14.3",
    "defusedxml==0.7.1",
    "geopandas==1.1.3",
    "lxml==6.1.0",
    "numpy==2.4.4",
    "pyogrio==0.12.1",
    "restgdf[geo]>=3,<4",
    "streamlit==1.57.0",
    "topojson==1.10",
]

[project.urls]
Homepage = "https://github.com/AdventureSeeker423/geospatial-data-converter"
Issues = "https://github.com/AdventureSeeker423/geospatial-data-converter/issues"
Changelog = "https://github.com/AdventureSeeker423/geospatial-data-converter/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "bumpver>=2024.1130",
    "pre-commit>=4.3.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "twine>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
ignore = ["E501"]

[tool.setuptools]
package-dir = { "" = "geospatial-data-converter" }
py-modules = ["app", "arcgis_loader", "kml_tricks", "utils"]

[tool.pytest.ini_options]
pythonpath = ["geospatial-data-converter"]
testpaths = ["tests"]
addopts = "--cov=geospatial-data-converter"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.bumpver]
current_version = "1.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"geospatial-data-converter/app.py" = ['__version__ = "{version}"']
